--- a/html/index.html
+++ b/html/index.html
@@ -5,11 +5,12 @@
     <title>Trello</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="../css/index.css" />
+    <link rel="stylesheet" type="text/css" href="//stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
     <script src="../js/index.js" type="module"></script>
 </head>
 <body>
     <div data-filepath="header.html"></div>
-    <div id="content" >
+    <div class="container" >
         <p>Content</p>
     </div>
     <div data-filepath="footer.html"></div>
