--- a/html/header.html
+++ b/html/header.html
@@ -4,5 +4,6 @@
         <img src="/docs/4.1/assets/brand/bootstrap-solid.svg" width="30" height="30" class="d-inline-block align-top" alt="">
             Almost Trello
       </a>
+      <button class="btn btn-primary" id="new-project-button"><i class="far fa-plus-square"></i></button>
     </nav>
 </header>
