Add onclick to #new-project-button cause async excludes using eventListner on that object

--- a/html/header.html
+++ b/html/header.html
@@ -1,9 +1,9 @@
 <header>
     <nav class="navbar navbar-light bg-light">
       <a class="navbar-brand" href="#">
-        <img src="/docs/4.1/assets/brand/bootstrap-solid.svg" width="30" height="30" class="d-inline-block align-top" alt="">
+        <img src="//docs/4.1/assets/brand/bootstrap-solid.svg" width="30" height="30" class="d-inline-block align-top" alt="">
             Almost Trello
       </a>
-      <button class="btn btn-primary" id="new-project-button"><i class="far fa-plus-square"></i></button>
+      <button class="btn btn-primary" id="new-project-button" onclick="document.getElementById(`myModal`).style.display = `block`"><i class="far fa-plus-square"></i></button>
     </nav>
 </header>
