Move .card code to separate file; Add .modal-content code

--- a/html/index.html
+++ b/html/index.html
@@ -6,19 +6,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="../css/index.css" />
     <link rel="stylesheet" type="text/css" href="//stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+    <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     <script src="../js/index.js" type="module"></script>
 </head>
 <body>
     <div data-filepath="header.html"></div>
     <div class="container" >
-        <div class="card" style="width: 18rem;">
-          <div class="card-body">
-            <h5 class="card-title">Project title</h5>
-            <p class="card-text">Some short project description</p>
-            <a href="#" class="btn btn-primary">View project</a>
-          </div>
+
+    <!-- The Modal -->
+    <div id="myModal" class="modal">
+
+    <!-- Modal content -->
+    <div class="modal-content">
+        <span id="close" class="close">Close</span> <!-- switch for some fancy graphic -->
+
+        <form class="border rounded p-3">
+        <div class="form-group">
+            <label for="formGroupExampleInput">Title</label>
+            <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input">
         </div>
+        <div class="form-group">
+            <label for="formGroupExampleInput2">Description</label>
+            <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Another input">
+            </div>
+        <div class="form-group">
+            <button type="submit" class="btn btn-primary btn-block">Create</button>
+        </div>
+    </form>
+
+    </div>
+
     </div>
     <div data-filepath="footer.html"></div>
 </body>
