--- a/html/header.html
+++ b/html/header.html
@@ -1,7 +1,6 @@
 <header>
     <nav class="navbar navbar-light bg-light">
-      <a class="navbar-brand" href="#">
-        <img src="/docs/4.1/assets/brand/bootstrap-solid.svg" width="30" height="30" class="d-inline-block align-top" alt="">
+      <a class="navbar-brand" href="../html/index.html">
             Almost Trello
       </a>
       <button class="btn btn-primary" id="new-project-button"><i class="far fa-plus-square"></i></button>
