--- a/html/project_template.html
+++ b/html/project_template.html
@@ -15,7 +15,7 @@
 <body>
     <div data-filepath="project_header.html"></div>
     <div id="container">
-        	<h1>To-Do List <span id="toggle-form"><i class="fa fa-plus"></i></span></h1>
+        	<h1>To-Do List</h1>
 	<input type="text" name="newTask" placeholder="Add new Todo">
 
 	<ul id="todo-list-id">
