--- a/html/header.html
+++ b/html/header.html
@@ -1,7 +1,7 @@
 <header>
     <nav class="navbar navbar-light bg-light">
       <a class="navbar-brand" href="../html/index.html">
-            Almost Trello
+            Trelolo
       </a>
       <button class="btn btn-primary" id="new-project-button"><i class="far fa-plus-square"></i></button>
     </nav>
