--- a/html/project_header.html
+++ b/html/project_header.html
@@ -1,7 +1,7 @@
 <header>
     <nav class="navbar navbar-light bg-light">
       <a class="navbar-brand" href="../html/index.html">
-            Almost Trello
+            Trelolo
       </a>
       <h4>Project Name</h4>
       <button class="btn btn-primary" id="new-project-primary"></i>Create New List</button>
