--- a/html/index.html
+++ b/html/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div data-filepath="header.html"></div>
-    <div class="container" >
+    <div id="main-project-container" class="container" ></div>
 
     <!-- The Modal -->
     <div id="myModal" class="modal">
@@ -23,14 +23,14 @@
         <form class="border rounded p-3">
         <div class="form-group">
             <label for="formGroupExampleInput">Title</label>
-            <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input">
+            <input id="title" type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input">
         </div>
         <div class="form-group">
             <label for="formGroupExampleInput2">Description</label>
-            <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Another input">
+            <input type="text" id="description" type="text" class="form-control" id="formGroupExampleInput2" placeholder="Another input">
             </div>
         <div class="form-group">
-            <button type="submit" class="btn btn-primary btn-block">Create</button>
+            <button id="modal-submit" type="button" class="btn btn-primary btn-block">Create</button>
         </div>
     </form>
 
