--- a/html/footer.html
+++ b/html/footer.html
@@ -1,1 +1,5 @@
-<footer>Some footer</footer>
+<footer class="footer">
+    <div class="container">
+        <span class="text-muted">Copyright @ Trelolo Team Codecool Cracov 2018</span>
+    </div>
+</footer>
