--- a/html/footer.html
+++ b/html/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer">
     <div class="container">
-        <span class="text-muted">Copyright @ Trelolo Team Codecool Cracov 2018</span>
+        <span class="text-muted">Copyright @ Trelolo Team Codecool Cracow 2018</span>
     </div>
 </footer>
