--- a/html/project-card.html
+++ b/html/project-card.html
@@ -2,6 +2,6 @@
     <div class="card-body">
         <h5 class="card-title">Project title</h5>
         <p class="card-text">Some short project description</p>
-        <a href="#" class="btn btn-primary">View project</a>
+        <a href="../html/project_template.html" class="btn btn-primary view-project">View project</a>
     </div>
 </div>
