Add onlickc to header button

--- a/html/project_header.html
+++ b/html/project_header.html
@@ -4,6 +4,6 @@
             Trelolo
       </a>
       <h4>Project Name</h4>
-      <button class="btn btn-primary" id="new-project-primary"></i>Create New List</button>
+      <button class="btn btn-primary" id="new-project-primary"  onclick="document.getElementById(`myModal`).style.display = `block`"></i>Create New List</button>
     </nav>
 </header>
