--- a/html/index.html
+++ b/html/index.html
@@ -17,8 +17,8 @@
     <div id="myModal" class="modal">
 
     <!-- Modal content -->
-    <div class="modal-content">
-        <span id="close" class="close">Close</span> <!-- switch for some fancy graphic -->
+    <div class="modal-content" id="modal-content-bt-override">
+        <span id="close" class="close"><i class="far fa-window-close"></i></span>
 
         <form class="border rounded p-3">
         <div class="form-group">
