--- a/html/project_header.html
+++ b/html/project_header.html
@@ -3,7 +3,7 @@
       <a class="navbar-brand" href="../html/index.html">
             Trelolo
       </a>
-      <h4>Project Name</h4>
+      <h4 id="current-project-title">Project Name</h4>
       <button class="btn btn-primary" id="new-project-primary"  onclick="document.getElementById(`myModal`).style.display = `block`"></i>Create New List</button>
     </nav>
 </header>
