Implement removing existing project feature

--- a/html/project-card.html
+++ b/html/project-card.html
@@ -3,5 +3,17 @@
         <h5 class="card-title">Project title</h5>
         <p class="card-text">Some short project description</p>
         <a href="../html/project_template.html" class="btn btn-primary view-project">View project</a>
+        
+        <div class="btn-group dropright">
+            <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Actions
+            </button>
+            
+            <div class="dropdown-menu">
+                <!-- Dropdown menu links -->
+                 <button class="edit-project-button dropdown-item" type="button"><i class="fa fa-edit"></i> Edit </button>
+                 <button class="delete-project-button dropdown-item" type="button"><i class="fa fa-trash"></i> Delete </button>
+            </div>
+        </div>
     </div>
 </div>
