--- a/html/list-template.html
+++ b/html/list-template.html
@@ -1,6 +1,5 @@
-<h1 class="list-title">To-Do-Title</h1>
+<div class="list-title">To-Do-Title</div>
 <input type="text" name="newTask" placeholder="Add new Todo">
 <ul class="todo-list" id="todo-list-id" ondrop=drop(event) ondragover=allowDrop(event)>
     <li class="empty-li"></li>
-    <!--<li class="task" id="taskId" draggable="true" ondragstart=drag(event)> <span><i class="fa fa-trash"></i></span>Task title</li>-->
 </ul>
