--- a/html/footer.html
+++ b/html/footer.html
@@ -1,5 +1,6 @@
 <footer class="footer">
-    <div class="container">
-        <span class="text-muted">Copyright @ Trelolo Team Codecool Cracow 2018</span>
+    <div class="footer-copyright text-center py-3">
+        Copyright @ Trelolo Team Codecool Cracow 2018
     </div>
 </footer>
+
