Add tag for trash, move title info separate span

--- a/html/list-template.html
+++ b/html/list-template.html
@@ -1,4 +1,9 @@
-<div class="list-title">To-Do-Title</div>
+<div  class="list-title">
+    <h1 class="list-title">
+        <span class="title-field">To-Do-Title</span>
+        <i class="list-trash fas fa-trash"></i>
+    </h1>
+</div>
 <input type="text" name="newTask" placeholder="Add new Todo">
 <ul class="todo-list" id="todo-list-id" ondrop=drop(event) ondragover=allowDrop(event)>
     <li class="empty-li"></li>
