Fix drag and drop targeting

--- a/html/list-template.html
+++ b/html/list-template.html
@@ -1,5 +1,3 @@
 <div class="list-title">To-Do-Title</div>
 <input type="text" name="newTask" placeholder="Add new Todo">
-<ul class="todo-list" id="todo-list-id" ondrop=drop(event) ondragover=allowDrop(event)>
-    <li class="empty-li"></li>
-</ul>
+<ul class="todo-list" id="todo-list-id"></ul>
