--- a/html/index.html
+++ b/html/index.html
@@ -27,7 +27,7 @@
         </div>
         <div class="form-group">
             <label for="description">Description</label>
-            <input type="text" id="description" type="text" class="form-control" placeholder="Enter description" required/>
+            <textarea class="form-control" rows="5" id="description" placeholder="Enter description"></textarea>
         </div>
         <div class="form-group">
             <button id="modal-submit" type="submit" class="btn btn-primary btn-block">Create</button>
