--- a/html/list-template.html
+++ b/html/list-template.html
@@ -5,6 +5,6 @@
     </h1>
 </div>
 <input type="text" name="newTask" placeholder="Add new Todo">
-<ul class="todo-list" id="todo-list-id" ondrop=drop(event) ondragover=allowDrop(event)>
+<ul class="todo-list" ondrop=drop(event) ondragover=allowDrop(event)>
     <li class="empty-li"></li>
 </ul>
