--- a/html/list-template.html
+++ b/html/list-template.html
@@ -1,7 +1,7 @@
 <div  class="list-title">
     <h1 class="list-title">
         <span class="title-field">To-Do-Title</span>
-        <i class="list-trash fas fa-trash"></i>
+        <i class="del-item fas fa-trash"></i>
     </h1>
 </div>
 <input type="text" name="newTask" placeholder="Add new Todo">
