Switch class task-trash to del-item

--- a/html/task-template.html
+++ b/html/task-template.html
@@ -1,5 +1,5 @@
 <span>
-       <i class="fa fa-trash task-trash"></i>
+       <i class="fa fa-trash del-item"></i>
 </span>
 <p class="task-title"></p>
     
