Change intro page and navbar styling

--- a/html/project_header.html
+++ b/html/project_header.html
@@ -1,7 +1,10 @@
 <header>
     <nav class="navbar navbar-light bg-light">
-      <a class="navbar-brand" href="../html/index.html">
+      <a class="navbar-brand" href="../html/landing-page.html">
             Trelolo
+      </a>
+      <a class="navbar-brand" href="../html/landing-page.html">
+            My Project
       </a>
       <h4 id="current-project-title">Project Name</h4>
       <button class="btn btn-primary" id="new-project-primary"  onclick="document.getElementById(`myModal`).style.display = `block`"></i>Create New List</button>
