--- a/html/project_template.html
+++ b/html/project_template.html
@@ -5,6 +5,7 @@
     <title>Trelolo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="../css/index.css" />
+     <link rel="stylesheet" type="text/css" media="screen" href="../css/footer.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="../css/project_template.css" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
