--- a/html/project_header.html
+++ b/html/project_header.html
@@ -1,12 +1,19 @@
-<header>
-    <nav class="navbar navbar-light bg-light">
-      <a class="navbar-brand" href="../html/landing-page.html">
-            Trelolo
-      </a>
-      <a class="navbar-brand" href="../html/landing-page.html">
-            My Project
-      </a>
-      <h4 id="current-project-title">Project Name</h4>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="../html/landing-page.html">Trelolo</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <a class="navbar-brand" href="../html/index.html">My Projects <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <span id="current-project-title" class="navbar-brand" >Project Name</span>
+      </li>
+    </ul>
+    <form class="form-inline my-2 my-lg-0">
       <button class="btn btn-primary" id="new-project-primary"  onclick="document.getElementById(`myModal`).style.display = `block`"></i>Create New List</button>
-    </nav>
-</header>
+    </form>
+  </div>
+</nav>
