Add script reference; Ad continue class to redirect button

--- a/html/landing-page.html
+++ b/html/landing-page.html
@@ -7,7 +7,8 @@
 	<link rel="stylesheet" type="text/css" href="../css/landing-page.css">
 	<link rel="stylesheet" type="text/css" media="screen" href="../css/footer.css" />
 	<script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl" crossorigin="anonymous"></script>
-    <script defer type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<script defer type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<script src="../js/landing.js" type="module"></script>
 </head>
 <body>
   	<nav class="navbar navbar-default">
@@ -40,7 +41,7 @@
           <p class="item-3">Top app of 2018 according to Non-Existen Journal</p>
           <hr class="my-4">
           <p class="lead">
-            <a class="btn btn-primary btn-lg" href="index.html" role="button">Continue</a>
+            <a class="btn btn-primary btn-lg continue" href="index.html" role="button">Continue</a>
           </p>
         </div>
 	</div>
