Change add new to do list button placement

--- a/html/project_template.html
+++ b/html/project_template.html
@@ -18,6 +18,9 @@
     <div data-filepath="project_header.html"></div>
     
     <div class="container" id="container" >
+        <div id="add-new-list-container">
+        <button class="btn btn-primary" id="new-project-primary"  onclick="document.getElementById(`myModal`).style.display = `block`"></i>Create New List</button>
+        </div>
         <div id="main-project-container" class="row"></div>
     </div>
 
