--- a/html/index.html
+++ b/html/index.html
@@ -24,11 +24,11 @@
         <form class="border rounded p-3">
         <div class="form-group">
             <label for="title">Title</label>
-            <input id="title" class="form-control" type="text" placeholder="Enter project title" required/>
+            <input id="title" class="form-control" type="text" placeholder="Enter project title" required autofocus/>
         </div>
         <div class="form-group">
             <label for="description">Description</label>
-            <textarea class="form-control" rows="5" id="description" placeholder="Enter description"></textarea>
+            <textarea class="form-control" rows="5" id="description" placeholder="Enter description" required></textarea>
         </div>
         <div class="form-group">
             <button id="modal-submit" type="submit" class="btn btn-primary btn-block">Create</button>
