--- a/html/project_template.html
+++ b/html/project_template.html
@@ -34,7 +34,7 @@
         <form class="border rounded p-3">
         <div class="form-group">
             <label for="formGroupExampleInput">Title</label>
-            <input id="title" type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input" autofocus>
+            <input id="title" type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input" autofocus required>
         </div>
         <div class="form-group">
             <button id="modal-submit" type="button" class="btn btn-primary btn-block">Create</button>
