--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta http-equiv="refresh" content="0; ulr=http//Trello.github.io/html/landing-page.html" /> 
+    <meta http-equiv="refresh" content="0; ulr=http//Leanka.github.io/Trello/html/index.html" /> 
 </head>
 <body>
     
