Remove autofocus attribute from header button

--- a/html/header.html
+++ b/html/header.html
@@ -3,6 +3,6 @@
       <a class="navbar-brand" href="../html/landing-page.html">
             Trelolo
       </a>
-      <button class="btn btn-primary" id="new-project-button" onclick="document.getElementById(`myModal`).style.display = `block`" autofocus><i class="far fa-plus-square"></i></button>
+      <button class="btn btn-primary" id="new-project-button" onclick="document.getElementById(`myModal`).style.display = `block`"><i class="far fa-plus-square"></i></button>
     </nav>
 </header>
