Remove href value

--- a/html/project-card.html
+++ b/html/project-card.html
@@ -2,7 +2,7 @@
     <div class="card-body">
         <h5 class="card-title">Project title</h5>
         <p class="card-text">Some short project description</p>
-        <a href="../html/project_template.html" class="btn btn-primary view-project">View project</a>
+        <a href="" class="btn btn-primary view-project">View project</a>
         
         <div class="btn-group dropright">
             <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
