Replace landing page path with root path

--- a/html/header.html
+++ b/html/header.html
@@ -1,6 +1,6 @@
 <header>
     <nav class="navbar navbar-light bg-light">
-      <a class="navbar-brand" href="../html/landing-page.html">
+      <a class="navbar-brand" href="../">
             Trelolo
       </a>
       <button class="btn btn-primary" id="new-project-button" onclick="document.getElementById(`myModal`).style.display = `block`"><i class="far fa-plus-square"></i></button>
