--- a/html/project_header.html
+++ b/html/project_header.html
@@ -3,8 +3,8 @@
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <a class="navbar-brand" href="../html/landing-page.html">Trelolo</a>
-    <a class="navbar-brand" href="../html/index.html">My Projects <span class="sr-only">(current)</span></a>
+    <a class="navbar-brand" href="../">Trelolo</a>
+    <a class="navbar-brand" href="../home/5b4b4e5c7bcc4f69875e1c51">My Projects <span class="sr-only">(current)</span></a>
     <span id="current-project-title" class="navbar-brand" >Project Name</span>
   </div>
 </nav>
