--- a/html/landing-page.html
+++ b/html/landing-page.html
@@ -20,11 +20,11 @@
         				<span class="icon-bar"></span>
        		 			<span class="icon-bar"></span>
      				</button>
-     				 <a class="navbar-brand" href="../html/landing-page.html">Trelolo</a>
+     				 <a class="navbar-brand" href="../">Trelolo</a>
    				 </div>
   		  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
     		<ul class="nav navbar-nav">
-    			<li class="active"><a href="./home/5b4b4e5c7bcc4f69875e1c51">My projects</a></li>
+    			<li class="active"><a href="../home/5b4b4e5c7bcc4f69875e1c51">My projects</a></li>
      		</ul>
     		<ul class="nav navbar-nav navbar-right">
      		    <li><a href="#">Sign Up <i class="fas fa-user-plus"></i></a></li>
