Implement registering new user

--- a/html/landing-page.html
+++ b/html/landing-page.html
@@ -27,8 +27,8 @@
     			<li class="active"><a href="../home/5b4b4e5c7bcc4f69875e1c51">My projects</a></li>
      		</ul>
     		<ul class="nav navbar-nav navbar-right">
-     		    <li><a href="#">Sign Up <i class="fas fa-user-plus"></i></a></li>
-     		    <li><a href="#">Login <i class="fas fa-user"></i></a></li>
+     		    <li><a href="/register">Sign Up <i class="fas fa-user-plus"></i></a></li>
+     		    <li><a href="/login">Login <i class="fas fa-user"></i></a></li>
      		</ul>
    		  </div>
   		</div>
