--- a/html/login.html
+++ b/html/login.html
@@ -7,9 +7,9 @@
     </head>
 <body>
    <div class="row">
-    <h1 style="text-align: center">Sign Up</h1>
+    <h1 style="text-align: center">Log In</h1>
     <div style="width: 30%; margin: 25px auto;">
-        <form action="/register" method="post">
+        <form action="/login" method="POST">
             <div class="form-group">
                 <input class="form-control" type="text" name="username" placeholder="username">
             </div>
@@ -17,7 +17,7 @@
                 <input class="form-control" type="password" name="password" placeholder="password">
             </div>
             <div class="form-group">
-                <button class="btn btn-lg btn-primary btn-block">Sign Up!</button>
+                <button class="btn btn-lg btn-primary btn-block">Continue</button>
             </div>
         </form>
         <a href="/">Go Back</a>
