Implement checking authentication before viewing projects

--- a/html/landing-page.html
+++ b/html/landing-page.html
@@ -24,7 +24,7 @@
    				 </div>
   		  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
     		<ul class="nav navbar-nav">
-    			<li class="active"><a href="../home/5b4b4e5c7bcc4f69875e1c51">My projects</a></li>
+    			<li class="active"><a href="/home">My projects</a></li>
      		</ul>
     		<ul class="nav navbar-nav navbar-right">
      		    <li><a href="/register">Sign Up <i class="fas fa-user-plus"></i></a></li>
@@ -41,7 +41,7 @@
           <p class="item-3">Top app of 2018 according to Non-Existen Journal</p>
           <hr class="my-4">
           <p class="lead">
-            <a class="btn btn-primary btn-lg continue" href="./home/5b4b4e5c7bcc4f69875e1c51" role="button">Continue</a>
+            <a class="btn btn-primary btn-lg continue" href="/home" role="button">Continue</a>
           </p>
         </div>
 	</div>
