Add logout button

--- a/html/header.html
+++ b/html/header.html
@@ -3,6 +3,9 @@
       <a class="navbar-brand" href="../">
             Trelolo
       </a>
+      <a class="navbar-brand navbar-right" id="logout" href="/logout"><i class="fas fa-sign-out-alt"></i>
+          Logout
+      </a>
       <button class="btn btn-primary" id="new-project-button" onclick="document.getElementById(`myModal`).style.display = `block`"><i class="far fa-plus-square"></i></button>
     </nav>
 </header>
