--- a/html/project_header.html
+++ b/html/project_header.html
@@ -4,8 +4,11 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <a class="navbar-brand" href="../">Trelolo</a>
-    <a class="navbar-brand" href="../home/5b4b4e5c7bcc4f69875e1c51">My Projects <span class="sr-only">(current)</span></a>
+    <a class="navbar-brand" href="/home">My Projects <span class="sr-only">(current)</span></a>
     <span id="current-project-title" class="navbar-brand" >Project Name</span>
+    <a class="navbar-brand" id="logout" href="/logout"><i class="fas fa-sign-out-alt"></i>
+      Logout
+    </a>
   </div>
 </nav>
 
