Replace Actions button with dots icon, move it to top right corner of the card

--- a/html/project-card.html
+++ b/html/project-card.html
@@ -1,19 +1,15 @@
 <div class="card" style="width: 18rem;">
     <div class="card-body">
+        <div class="btn-group">
+            <i class="fas fa-ellipsis-h btn dropdown-toggle" data-toggle="dropdown"></i>
+            <div class="dropdown-menu">
+                    <button class="edit-project-button dropdown-item" type="button"><i class="fa fa-edit"></i> Edit </button>
+                    <button class="delete-project-button dropdown-item" type="button"><i class="fa fa-trash"></i> Delete </button>
+            </div>
+        </div>
+
         <h5 class="card-title">Project title</h5>
         <p class="card-text">Some short project description</p>
         <a href="" class="btn btn-primary view-project">View project</a>
-        
-        <div class="btn-group dropright">
-            <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Actions
-            </button>
-            
-            <div class="dropdown-menu">
-                <!-- Dropdown menu links -->
-                 <button class="edit-project-button dropdown-item" type="button"><i class="fa fa-edit"></i> Edit </button>
-                 <button class="delete-project-button dropdown-item" type="button"><i class="fa fa-trash"></i> Delete </button>
-            </div>
-        </div>
     </div>
 </div>
