Fix landing page responsivenees

--- a/html/landing-page.html
+++ b/html/landing-page.html
@@ -36,11 +36,13 @@
 	<div id="content" class="container">
         <div class="jumbotron">
           <h1 class="display-4">Welcome to TRELOLO!</h1>
-          <p class="item-1">Work more efficiently.</p>
-          <p class="item-2">Plan your projects in a simple way.</p>
-          <p class="item-3">Top app of 2018 according to Non-Existen Journal</p>
-          <hr class="my-4">
+          <div id="animate-text-container">
+            <p class="item-1">Work more efficiently.</p>
+            <p class="item-2">Plan your projects in a simple way.</p>
+            <p class="item-3">Top app of 2018 according to Non-Existen Journal</p>
+          </div>
           <p class="lead">
+            <hr class="my-4">
             <a class="btn btn-primary btn-lg continue" href="/home" role="button">Continue</a>
           </p>
         </div>
@@ -49,6 +51,6 @@
     <div class="footer-copyright text-center py-3">
         <p>Copyright @ Trelolo Team Codecool Cracow 2018</p>
     </div>
-</footer>
+    </footer>
 </body>
 </html>
