--- a/html/register.html
+++ b/html/register.html
@@ -5,23 +5,27 @@
         <title> Trelolo</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" >
     </head>
-<body>
-   <div class="row">
-    <h1 style="text-align: center">Sign Up</h1>
-    <div style="width: 30%; margin: 25px auto;">
-        <form action="/register" method="post">
-            <div class="form-group">
-                <input class="form-control" type="text" name="username" placeholder="username">
-            </div>
-            <div class="form-group">
-                <input class="form-control" type="password" name="password" placeholder="password">
-            </div>
-            <div class="form-group">
-                <button class="btn btn-lg btn-primary btn-block">Sign Up!</button>
-            </div>
-        </form>
-        <a href="/">Go Back</a>
-    </div>
-</div> 
-</body>
+    <body>
+       <div class="row">
+           <div class="container">
+               <div class="well">
+                    <h1 style="text-align: center">Register</h1>
+                    <div style="width: 30%; margin: 25px auto;">
+                    <form action="/register" method="POST">
+                    <div class="form-group">
+                        <input class="form-control" type="text" name="username" placeholder="username">
+                    </div>
+                    <div class="form-group">
+                        <input class="form-control" type="password" name="password" placeholder="password">
+                    </div>
+                    <div class="form-group">
+                        <button class="btn btn-lg btn-primary btn-block">Register</button>
+                    </div>
+                    </form>
+                    <a href="/">Go Back</a>
+                    </div> 
+               </div>
+           </div>
+        </div> 
+    </body>
 </html>
