--- a/html/login.html
+++ b/html/login.html
@@ -4,8 +4,31 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title> Trelolo</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" >
+        <link rel="stylesheet" type="text/css" href="../css/landing-page.css">
     </head>
     <body>
+          	<nav class="navbar navbar-default">
+ 		  <div class="container">
+   				<div class="navbar-header">
+    		  		<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        				<span class="sr-only">Toggle navigation</span>
+        				<span class="icon-bar"></span>
+        				<span class="icon-bar"></span>
+       		 			<span class="icon-bar"></span>
+     				</button>
+     				 <a class="navbar-brand" href="../">Trelolo</a>
+   				 </div>
+  		  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+    		<ul class="nav navbar-nav">
+    			<li class="active"><a href="/home">My projects</a></li>
+     		</ul>
+    		<ul class="nav navbar-nav navbar-right">
+     		    <li><a href="/register">Sign Up <i class="fas fa-user-plus"></i></a></li>
+     		    <li><a href="/login">Login <i class="fas fa-user"></i></a></li>
+     		</ul>
+   		  </div>
+  		</div>
+	</nav>
        <div class="row">
            <div class="container">
                <div class="well">
