--- a/html/project-card.html
+++ b/html/project-card.html
@@ -1,7 +1,7 @@
 <div class="card" style="width: 18rem;">
     <div class="card-body">
         <div class="btn-group">
-            <i class="fas fa-ellipsis-h btn dropdown-toggle" data-toggle="dropdown"></i>
+            <i class="fas fa-ellipsis-h btn dropdown-toggle" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></i>
             <div class="dropdown-menu">
                     <button class="edit-project-button dropdown-item" type="button"><i class="fa fa-edit"></i> Edit </button>
                     <button class="delete-project-button dropdown-item" type="button"><i class="fa fa-trash"></i> Delete </button>
