Replace trash icon with dropdown options menu

--- a/html/task-template.html
+++ b/html/task-template.html
@@ -1,5 +1,12 @@
 <span>
-       <i class="fa fa-trash del-item"></i>
+    <div class="btn-group">
+        <i class="fas fa-ellipsis-h dropdown-toggle" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></i>
+        <div class="dropdown-menu">
+                <button class="edit-project-button dropdown-item" type="button"><i class="fa fa-edit"></i> Edit </button>
+                <button class="delete-project-button dropdown-item del-item" type="button"><i class="fa fa-trash"></i> Delete </button>
+        </div>
+    </div>
+    <!-- <i class="fa fa-trash del-item"></i> -->
 </span>
 <p class="task-title"></p>
     
