--- a/html/header.html
+++ b/html/header.html
@@ -1,11 +1,17 @@
-<header>
-    <nav class="navbar navbar-light bg-light">
-      <a class="navbar-brand" href="../">
-            Trelolo
-      </a>
-      <a class="navbar-brand navbar-right" id="logout" href="/logout"><i class="fas fa-sign-out-alt"></i>
-          Logout
-      </a>
-      <button class="btn btn-primary" id="new-project-button" onclick="document.getElementById(`myModal`).style.display = `block`"><i class="far fa-plus-square"></i></button>
-    </nav>
-</header>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="/">Trelolo</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="/home">My Projects <span class="sr-only">(current)</span></a>
+      </li>
+    </ul>
+    <form class="form-inline my-2 my-lg-0" action="/logout" method="GET">
+      <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Logout</button>
+    </form>
+  </div>
+</nav>
