Change create new project and logout buttons styling

--- a/html/header.html
+++ b/html/header.html
@@ -10,8 +10,9 @@
         <a class="nav-link" href="/home">My Projects <span class="sr-only">(current)</span></a>
       </li>
     </ul>
+    <button class="btn btn-primary my-2 my-sm-0" id="new-project-button" onclick="document.getElementById(`myModal`).style.display = `block`"><i class="far fa-plus-square"></i>New Project</button>
     <form class="form-inline my-2 my-lg-0" action="/logout" method="GET">
-      <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Logout</button>
+      <button class="btn btn-outline-danger my-2 my-sm-0" type="submit">Logout</button>
     </form>
   </div>
 </nav>
