--- a/html/landing-page.html
+++ b/html/landing-page.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="../css/landing-page.css">
 	<link rel="stylesheet" type="text/css" media="screen" href="../css/footer.css" />
 	<script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl" crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 	<script defer type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<script src="../js/landing.js" type="module"></script>
 </head>
