--- a/html/register.html
+++ b/html/register.html
@@ -36,10 +36,10 @@
                     <div style="width: 30%; margin: 25px auto;">
                     <form action="/register" method="POST">
                     <div class="form-group">
-                        <input class="form-control" type="text" name="username" placeholder="username">
+                        <input class="form-control" type="text" name="username" placeholder="username" required autofocus autocomplete="on" maxlength="20">
                     </div>
                     <div class="form-group">
-                        <input class="form-control" type="password" name="password" placeholder="password">
+                        <input class="form-control" type="password" name="password" placeholder="password" required maxlength="20" minlength="6">
                     </div>
                     <div class="form-group">
                         <button class="btn btn-lg btn-primary btn-block">Continue</button>
