Fix crossing over task

--- a/html/task-template.html
+++ b/html/task-template.html
@@ -8,5 +8,5 @@
     </div>
     <!-- <i class="fa fa-trash del-item"></i> -->
 </span>
-<p class="task-title"></p>
+<p class="task-title" contenteditable="false"></p>
     
