--- a/html/landing-page.html
+++ b/html/landing-page.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Trelolo</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet"> 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" >
 	<link rel="stylesheet" type="text/css" href="../css/landing-page.css">
