--- a/html/index.html
+++ b/html/index.html
@@ -30,7 +30,7 @@
         </div>
         <div class="form-group">
             <label for="description">Description</label>
-            <textarea class="form-control" rows="5" id="description" placeholder="Enter description" required></textarea>
+            <textarea class="form-control" rows="5" id="description" placeholder="Enter description"></textarea>
         </div>
         <div class="form-group">
             <button id="modal-submit" type="submit" class="btn btn-primary btn-block">Create</button>
